# Tomato_detection

./: README.md  roboflow_upload.py  run_test.py
Real time tomato detection/: yolo26_train.ipynb  yolo_realtime_persist.py  yolo_supervision_smoother.py
UI/: README.md  app.py  camera.py  pyproject.toml  tomato_observer_app.py  tomato_observer_pipeline.py
UI/scripts/: main_tomato_observer.py
UI/scripts/trackers/: basic_bytetracker.py  basic_sort.py
UI/src/tracking/pipelines/: __init__.py  bytetrack_pipeline.py  sort_pipeline.py  tomato_observer_pipeline.py
UI/src/tracking/utils/: motion.py  roi.py
UI/templates/: index.html
detection/: requirements.txt  yolo_realtime_detection.py  yolo_realtime_persist.py
metric/: metric.py
metric/Real time tomato detection/: yolo_realtime_persist.py  yolo_supervision_smoother.py
metric/detection/: run_test.py
metric/metric_coco/train/: _annotations.coco.json
metric/result1/: frame_summary.csv  matches.csv
metric/result2/: matches.csv
metric/result3/: frame_summary.csv  matches.csv  predictions.csv
metric/result4/: matches.csv  summary.txt
metric/tracker/: tracker_gt.py
metric_coco/: README.roboflow.txt
result1/: predictions.csv
result2/: predictions.csv  summary.txt
result3/: summary.txt
result4/: frame_summary.csv  predictions.csv
