[project]
name = "tomato-observation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyrootutils>=1.0.4",
    "supervision>=0.27.0.post2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "trackers>=2.3.0",
    "ultralytics>=8.4.41",
    "vidstab>=1.7.4",
]

[project.optional-dependencies]
web = ["flask>=3.0.0"]

# Windows/Linux: CUDA wheels from PyTorch (PyPI ships CPU-only torch on Windows).
# macOS: no CUDA wheels — torch/torchvision resolve from default PyPI.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
